Agregar el ícono de Instagram

--- a/src/style.css
+++ b/src/style.css
@@ -146,6 +146,10 @@ a {
   fill: #00aced;
 }
 
+.instagram svg:hover {
+  fill: #e1306c;
+}
+
 .sub-section {
   display: flex;
   justify-content: space-around;
