--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -152,6 +152,111 @@
             </div>
         </main>
 
+        <!-- info -->
+        <div class="mt-5 md:pl-8">
+            <div class="space-y-2 pt-6 pb-8 md:space-y-5">
+                <h1 
+                    class="text-3xl font-extrabold leading-9 tracking-tight text-gray-900 dark:text-gray-100 sm:text-4xl sm:leading-10 md:text-6xl md:leading-14">FAQ</h1>
+            </div>
+
+            <div class="max-w-none pt-8 pb-8 xl:col-span-2">
+                <!-- q1 -->
+                <div class="my-3">
+                    <div class="flex flex-row text-xl">
+                        <span class="text-pink-500">¿</span>
+                        <span class="text-gray-500 dark:text-gray-400">&nbsp;Nuevo sitio&nbsp;</span>
+                        <span class="text-pink-500">?</span>
+                    </div>
+
+                    <div>
+                        <div class="p-1 font-mono text-sm text-gray-400 dark:text-gray-600">
+                            Sí, sucedieron varias cosas:
+                        </div>
+
+                        <div class="p-2">
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">Mi proveedor de hosting y dominio era limitado.</div>
+                            </div>
+
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">Migre a Google, pero su servicio de dominios (clásico, pudo ser peor) fué vendido, así que a los 3 meses migre a otro proveedor.</div>
+                            </div>
+
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">El sitio esta en GitHub Pages actualmente, redireccionado con DNS records a mi dominio gestionado en CloudFlare (Una maravilla de servicio, espero estar completamente con ellos en los próximos meses).</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <!-- q2 -->
+                <div class="my-3">
+                    <div class="flex flex-row text-xl">
+                        <span class="text-pink-500">¿</span>
+                        <span class="text-gray-500 dark:text-gray-400">&nbsp;Cómo se hizo&nbsp;</span>
+                        <span class="text-pink-500">?</span>
+                    </div>
+
+                    <div>
+                        <div class="p-1 font-mono text-sm text-gray-400 dark:text-gray-600">
+                            Básicamente todo en Angular:
+                        </div>
+
+                        <div class="p-2">
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">Toda la arquitectura de Front-End en Angular.</div>
+                            </div>
+
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">El estilizado esta en Tailwind CSS y hay una que otra extensión corriendo.</div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="my-3">
+                    <div class="flex flex-row text-xl">
+                        <span class="text-pink-500">¿</span>
+                        <span class="text-gray-500 dark:text-gray-400">&nbsp;Y el blog&nbsp;</span>
+                        <span class="text-pink-500">?</span>
+                    </div>
+
+                    <div>
+                        <div class="p-1 font-mono text-sm text-gray-400 dark:text-gray-600">
+                            Paso a mejor vida, aunque el contenido lo tengo para moverlo, hay ideas:
+                        </div>
+
+                        <div class="p-2">
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">Anteriormente estaba funcionando en WordPress. Considere Jekyll, pero tuve mas contras, sobre todo para compilar las gemas de Ruby hay que bajar un set de herramientas el livereload es malo y no se diga la integración con Tailwind CSS.</div>
+                            </div>
+
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">Otra opción era usar Gatsby pero era pesado.</div>
+                            </div>
+
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">Al final use Angular, solo me queda buscar hacer un generador estático para las publicaciones o hacer malabares con json.</div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
         <app-footer></app-footer>
 
     </div>
