--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -154,12 +154,12 @@
 
         <!-- info -->
         <div class="mt-5 md:pl-8">
-            <div class="space-y-2 pt-6 pb-8 md:space-y-5">
+            <div class="space-y-2 pt-2 pb-6 md:space-y-5">
                 <h1 
                     class="text-3xl font-extrabold leading-9 tracking-tight text-gray-900 dark:text-gray-100 sm:text-4xl sm:leading-10 md:text-6xl md:leading-14">FAQ</h1>
             </div>
 
-            <div class="max-w-none pt-8 pb-8 xl:col-span-2">
+            <div class="max-w-none pt-2 pb-6 xl:col-span-2">
                 <!-- q1 -->
                 <div class="my-3">
                     <div class="flex flex-row text-xl">
@@ -222,6 +222,7 @@
 
                 </div>
 
+                <!-- q3 -->
                 <div class="my-3">
                     <div class="flex flex-row text-xl">
                         <span class="text-pink-500">¿</span>
@@ -237,7 +238,7 @@
                         <div class="p-2">
                             <div class="flex flex-row">
                                 <div class="mr-2 text-lg text-pink-500">&rarr; </div>
-                                <div class="text-gray-500 dark:text-gray-400">Anteriormente estaba funcionando en WordPress. Considere Jekyll, pero tuve mas contras, sobre todo para compilar las gemas de Ruby hay que bajar un set de herramientas el livereload es malo y no se diga la integración con Tailwind CSS.</div>
+                                <div class="text-gray-500 dark:text-gray-400">Anteriormente estaba funcionando en WordPress. Considere Jekyll, pero tuve mas contras, sobre todo para compilar las gemas de Ruby hay que bajar un set de herramientas, el livereload es malo y no se diga la integración con Tailwind CSS.</div>
                             </div>
 
                             <div class="flex flex-row">
@@ -247,7 +248,45 @@
 
                             <div class="flex flex-row">
                                 <div class="mr-2 text-lg text-pink-500">&rarr; </div>
-                                <div class="text-gray-500 dark:text-gray-400">Al final use Angular, solo me queda buscar hacer un generador estático para las publicaciones o hacer malabares con json.</div>
+                                <div class="text-gray-500 dark:text-gray-400">Al final use Angular, solo me queda hacer un generador estático para las publicaciones o hacer malabares con json.</div>
+                            </div>
+
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">El desarrollo se realiza en mis tiempos libres, por lo cual va a tomar tiempo.</div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- q4 -->
+                <div class="my-3">
+                    <div class="flex flex-row text-xl">
+                        <span class="text-pink-500">¿</span>
+                        <span class="text-gray-500 dark:text-gray-400">&nbsp;Y el código fuente&nbsp;</span>
+                        <span class="text-pink-500">?</span>
+                    </div>
+
+                    <div>
+                        <div class="p-1 font-mono text-sm text-gray-400 dark:text-gray-600">
+                            Se encuentra en uno de mis repositorios de GitHub:
+                        </div>
+
+                        <div class="p-2">
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">Idealmente hay que borrar ciertos archivos, sobre todo para que el deploy no se les truene.</div>
+                            </div>
+
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">La arquitectura de Front-End que tiene este sitio en Angular puede servir como punto de partida para proyectos mediados y grandes.</div>
+                            </div>
+
+                            <div class="flex flex-row">
+                                <div class="mr-2 text-lg text-pink-500">&rarr; </div>
+                                <div class="text-gray-500 dark:text-gray-400">Los otros proyectos pasan a privados por la necesidad de infraestructura para subirlos online.</div>
                             </div>
                         </div>
                     </div>
