--- a/src/app/modules/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/home/pages/home-page/home-page.component.html
@@ -13,7 +13,7 @@
                         <div class="pt-6">
                             <h1 class="pb-6 text-3xl font-extrabold leading-9 tracking-tight text-gray-900 dark:text-gray-100 sm:text-4xl sm:leading-10 md:text-6xl md:leading-14">
                                 Francisco Javier
-                                <span class="text-pink-600 dark:text-pink-600">Gil Bautista</span>
+                                <span class="text-rose-700 dark:text-pink-700">Gil Bautista</span>
                             </h1>
     
                             <h2 class="pt-5 text-lg text-gray-600 dark:text-gray-300">
@@ -296,7 +296,7 @@
             </div>
         </div>
 
-        <app-footer></app-footer>
+        <app-footer class="bg-slate-100 hover:bg-slate-200 dark:bg-neutral-900 dark:hover:bg-neutral-800 transition duration-1000"></app-footer>
 
     </div>
 </div>
