--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --primary: #000000;
+    --secondary: #FFFFFF;
+}
+
+@layer base {
+    html {
+        font-family: "Ubuntu", system-ui, sans-serif;
+        scroll-behavior: smooth;
+    }
+}
+
+@layer components {
+    .example-class-extraction {
+        @apply bg-neutral-900 hover:bg-neutral-800;
+    }
+}
+
+@layer utilities {}
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #500724 #262626;
+}
+
+*::-webkit-scrollbar {
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #262626;
+    border-radius: 0;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #500724;
+    border-radius: 10px;
+    border: none;
+}
+
+::selection {
+    background: #be185d;
+}
+
+::-moz-selection {
+    background: #be185d;
+}
+
+::-webkit-selection {
+    background: #be185d;
+}
+
